2010-11-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* inst/scripts/gWidgetsWWWAJAX.R: for proxystore, changed how we get path, using
	uri not path part of SERVER

	* R/LocalVersion.R (localServerOpen): check for urls, downloads if there

2010-11-21  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gprocessingjs.R: added this back in. Provides a more
	interactive graphic interface, although only low level operations
	are available.

2010-11-20  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtree.R (gtree): added gtree widget. Not fully featured, as
	there is no grid

2010-11-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R (gslider): added tooltipTemplate (hidden) argument
	to specify a template for the tooltip. The value {0} is
	substituted. Again, not so fast. Had issues with 3.3.0 so reverted back

	* change ext-3.0 to ext-3.3.0 (primarily for the grid tree). Not
	so fast. Can't get 3.3.0 to work with chrome and safari so
	reverted back

	* R/aaa.R (EXTComponentWithStore$setSize): For components with
	stores (gtable, gdf, gbigtable) the size may be specified with a
	list with named components width, height and most imporantly
	columnWidths. The latter specifies the individual column widths in pixels.

2010-11-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gwindow.R (gwindow): add hidden argument AJAXtimeout to
	gwindow. Set larger or shorter than 10000 if needed.

2010-11-15  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* inst/templates/RApache-gWidgetsWWW.conf: restructured: put in
	defaults to match ubuntu installation of package (with sudo); need
	only configure where gWidgetsWWWrun files are, and this defaults
	to the Examples directory.

2010-11-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/LocalVersion.R (processBasehtmlFile): added headers to cache
	basehtml file

2010-10-27  john verzani  <verzani@john-verzanis-macbook-pro.local>
